--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,6 +25,12 @@ services:
     container_name: db
     ports:
       - 5432:5432
+    volumes:
+      - pgdata:/var/lib/postgresql/data
     environment:
+      - POSTGRES_DB=treenote
       - POSTGRES_USER=treenote
       - POSTGRES_PASSWORD=contrasena-extra-segura
+
+volumes:
+  pgdata:
