new notes design

--- a/treenote-backend/src/main/ui/package.json
+++ b/treenote-backend/src/main/ui/package.json
@@ -3,25 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "ajax": "0.0.4",
+    "antd": "^4.16.13",
     "axios": "^0.24.0",
     "cdbreact": "^1.2.1",
+    "frontend-collective-react-dnd-scrollzone": "^1.0.2",
     "material-icons": "^1.10.0",
+    "patch-package": "^6.4.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "react-sortable-tree": "^2.8.0",
+    "react-sortable-tree-theme-full-node-drag": "^1.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "patch-package"
   },
   "proxy": "http://localhost:8080",
   "eslintConfig": {
