--- a/treenote-backend/src/main/ui/package.json
+++ b/treenote-backend/src/main/ui/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router": "^6.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-sortable-tree": "^2.8.0",
